# paddleocr-onnx

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md
.github/scripts/: package_release.sh
.github/workflows/: build.yml  convert-models.yml  release.yml
include/: ocr_common.h  ocr_detector.h  ocr_http_server.h  ocr_pipeline.h  ocr_recognizer.h
scripts/: benchmark.sh  convert_to_onnx.ps1  convert_to_onnx.sh  download_models.ps1  download_models.sh  setup_deps.bat  setup_deps.ps1  setup_deps.sh
src/: ocr_benchmark.cpp  ocr_cli.cpp  ocr_common.cpp  ocr_detector.cpp  ocr_http_server.cpp  ocr_pipeline.cpp  ocr_recognizer.cpp  ocr_server.cpp
